--- a/Find_S_algorithm.ipynb
+++ b/Find_S_algorithm.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -22,7 +22,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "<ipython-input-7-b1cb4ea43154>:13: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+            "C:\\Users\\siris\\AppData\\Local\\Temp\\ipykernel_10308\\1977617140.py:14: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
             "  if specific_hypothesis[i] != row[i]:\n"
           ]
         }
@@ -59,6 +59,13 @@
         "specific_hypothesis = find_s(df)\n",
         "print(f\"Most specific hypothesis: {specific_hypothesis}\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
@@ -72,7 +79,15 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
       "version": "3.11.7"
     }
   },
