--- a/Find_S_algorithm.ipynb
+++ b/Find_S_algorithm.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -15,6 +15,11 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "     Sky AirTemp Humidity    Wind Water Forecast EnjoySport\n",
+            "0  Sunny    Warm   Normal  Strong  Warm     Same        Yes\n",
+            "1  Sunny    Warm     High  Strong  Warm     Same        Yes\n",
+            "3  Sunny    Warm     High    Weak  Cool   Change        Yes\n",
+            "['Sunny', 'Warm', 'Normal', 'Strong', 'Warm', 'Same']\n",
             "Most specific hypothesis: ['Sunny', 'Warm', 'Normal', 'Strong', 'Warm', 'Same']\n"
           ]
         },
@@ -22,7 +27,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\siris\\AppData\\Local\\Temp\\ipykernel_10308\\1977617140.py:14: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+            "C:\\Users\\siris\\AppData\\Local\\Temp\\ipykernel_2956\\2996197276.py:16: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
             "  if specific_hypothesis[i] != row[i]:\n"
           ]
         }
@@ -34,9 +39,11 @@
         "def find_s(training_data):\n",
         "  # Get the indices of positive examples\n",
         "  positive_examples = training_data[training_data.iloc[:, -1] == 'Yes']\n",
+        "  print(positive_examples)\n",
         "\n",
         "  # Initialize the most specific hypothesis with the first positive example\n",
         "  specific_hypothesis = positive_examples.iloc[0, :-1].tolist()\n",
+        "  print(specific_hypothesis)\n",
         "\n",
         "  # Iterate over the remaining positive examples\n",
         "  for index, row in positive_examples.iterrows():\n",
